[shenker/microscope_design] As used on 220331 to select hyperspectral filters.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -283,27 +283,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_heatmap(df):\n",
-    "    with pd.option_context(\n",
-    "        \"display.max_rows\", None, \"display.max_columns\", None\n",
-    "    ):  # more options can be specified also\n",
-    "        display(\n",
-    "            df.style.format(precision=2).background_gradient(cmap=\"RdPu\", axis=None)\n",
+    "def show_heatmap(df, highlight_negative=False, **kwargs):\n",
+    "    with pd.option_context(\"display.max_rows\", None, \"display.max_columns\", None):\n",
+    "        df = df.style.format(precision=2).background_gradient(\n",
+    "            **{\"cmap\": \"RdPu\", \"axis\": None, **kwargs}\n",
     "        )\n",
+    "        if highlight_negative:\n",
+    "\n",
+    "            def style_negative(v, props=\"\"):\n",
+    "                return props if v < 0 else None\n",
+    "\n",
+    "            df = df.applymap(\n",
+    "                style_negative,\n",
+    "                props=f\"background-color:{highlight_negative};color:white;\",\n",
+    "            )\n",
+    "        display(df)\n",
     "\n",
     "\n",
     "def fp_efficiency(dc, lp, ex, em, ex_cutoff, em_cutoff):\n",
-    "    ex_efficiency = ((1 - dc) * (ex / ex.sum())).sum()\n",
-    "    em_efficiency = (dc * lp * (em / em.sum())).sum()\n",
-    "    ex_threshold = 0\n",
-    "    em_threshold = 0\n",
-    "    # margin from ex/em peak to cutoff\n",
     "    return pd.Series(\n",
     "        {\n",
-    "            \"ex_efficiency\": ex_efficiency,\n",
-    "            # \"ex_threshold\": ex_threshold,\n",
-    "            \"em_efficiency\": em_efficiency,\n",
-    "            # \"em_threshold\": em_threshold,\n",
+    "            (\"efficiency\", \"ex\"): ((1 - dc) * (ex / ex.sum())).sum(),\n",
+    "            (\"efficiency\", \"em\"): (dc * lp * (em / em.sum())).sum(),\n",
+    "            (\"cutoff_amplitude\", \"ex\"): ex.loc[ex_cutoff],\n",
+    "            (\"cutoff_amplitude\", \"em\"): em.loc[em_cutoff],\n",
+    "            (\"margin\", \"ex\"): ex_cutoff - ex.idxmax(),\n",
+    "            (\"margin\", \"em\"): em.idxmax() - em_cutoff,\n",
     "        }\n",
     "    )\n",
     "\n",
@@ -325,13 +330,17 @@
     "                    lp,\n",
     "                    ex,\n",
     "                    em,\n",
-    "                    filter_combinations[filter_combo][\"ex_cutoff\"],\n",
-    "                    filter_combinations[filter_combo][\"em_cutoff\"],\n",
+    "                    filter_combinations.loc[filter_combo][\"ex_cutoff\"],\n",
+    "                    filter_combinations.loc[filter_combo][\"em_cutoff\"],\n",
     "                )\n",
     "                .to_frame()\n",
     "                .T\n",
     "            )\n",
-    "        d[filter_combo] = pd.concat(dd, axis=1).swaplevel(axis=1).sort_index(axis=1)\n",
+    "        d[filter_combo] = (\n",
+    "            pd.concat(dd, axis=1)\n",
+    "            .reorder_levels([1, 2, 0], axis=1)\n",
+    "            .sort_index(axis=1, level=1, sort_remaining=False)\n",
+    "        )\n",
     "    return pd.concat(d, axis=0).droplevel(-1)"
    ]
   },
@@ -348,7 +357,9 @@
     "    \"mCherry2\",\n",
     "    \"mKate2\",\n",
     "    \"E2-Crimson\",\n",
+    "    \"TurboRFP\",\n",
     "]\n",
+    "selected_fps = sorted(selected_fps, key=lambda x: fps[x][\"ex_max\"])\n",
     "filter_metrics = evaluate_filter_combinations(\n",
     "    selected_filter_combinations,\n",
     "    selected_fps,\n",
@@ -365,7 +376,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_heatmap(filter_metrics)"
+    "show_heatmap(filter_metrics[\"efficiency\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_heatmap(filter_metrics[\"cutoff_amplitude\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_heatmap(filter_metrics[\"margin\"], vmin=0, highlight_negative=\"black\")"
    ]
   },
   {
@@ -376,6 +405,58 @@
    "source": [
     "filter_plot(fp_names=selected_fps)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_plot(fp_names=selected_fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_plot(fp_names=selected_fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_plot(fp_names=selected_fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_plot(fp_names=selected_fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\", \".join(fps.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
