[shenker/microscope_design] Imported Semrock filters.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -9,12 +9,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
+    "import io\n",
     "import requests\n",
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
     "import panel as pn\n",
     "import pint\n",
-    "from cytoolz import dissoc"
+    "from requests_html import HTMLSession"
    ]
   },
   {
@@ -148,6 +149,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_semrock_filters(urls, bins=None):\n",
+    "    if isinstance(urls, str):\n",
+    "        urls = [urls]\n",
+    "    session = HTMLSession()\n",
+    "    spectra = {}\n",
+    "    for url in urls:\n",
+    "        html = session.get(url).html\n",
+    "        catalog_numbers = [\n",
+    "            a.text for a in html.find(\"#resultsView .cartSection > h1 > a\")\n",
+    "        ]\n",
+    "        for catalog_number in catalog_numbers:\n",
+    "            spectrum_number = \"-\".join(catalog_number.split(\"-\")[:2]).replace(\"/\", \"_\")\n",
+    "            name = f\"Semrock {spectrum_number}\"\n",
+    "            spectrum_urls = [\n",
+    "                f\"https://www.semrock.com/_ProductData/Spectra/{spectrum_number}_Spectrum.txt\",\n",
+    "                f\"https://www.semrock.com/_ProductData/Spectra/{spectrum_number}_DesignSpectrum.txt\",\n",
+    "            ]\n",
+    "            spectrum = None\n",
+    "            for spectrum_url in spectrum_urls:\n",
+    "                res = session.get(spectrum_url)\n",
+    "                if not res.ok:\n",
+    "                    continue\n",
+    "                lines = io.StringIO(\n",
+    "                    \"\\n\".join(\n",
+    "                        [l for l in res.text.split(\"\\n\") if not l.startswith(\"---\")]\n",
+    "                    )\n",
+    "                )\n",
+    "                spectrum = pd.read_csv(\n",
+    "                    lines,\n",
+    "                    sep=\"\\t\",\n",
+    "                    skiprows=4,\n",
+    "                    names=[\"wavelength\", spectrum_number],\n",
+    "                    index_col=0,\n",
+    "                ).squeeze()\n",
+    "                break\n",
+    "            if spectrum is None:\n",
+    "                raise ValueError(f\"could not find spectrum for '{spectrum_number}'\")\n",
+    "            if bins is not None:\n",
+    "                spectrum = util.interpolate_dataframe(spectrum, bins)\n",
+    "            spectra[name] = spectrum\n",
+    "    return spectra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "semrock_dichroic_urls = [\n",
+    "    \"https://www.semrock.com/filtersRefined.aspx?minWL=520&maxWL=660&id=497,800&page=1&so=0&recs=10000\"\n",
+    "]\n",
+    "semrock_longpass_urls = [\n",
+    "    f\"https://www.semrock.com/filtersRefined.aspx?minWL=520&maxWL=660&id=21,{id_}&page=1&so=0&recs=10000\"\n",
+    "    for id_ in (537, 538, 545)\n",
+    "]\n",
+    "\n",
+    "dichroics = {**dichroics, **get_semrock_filters(semrock_dichroic_urls, bins=bins)}\n",
+    "longpass_filters = {\n",
+    "    **longpass_filters,\n",
+    "    **get_semrock_filters(semrock_longpass_urls, bins=bins),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "fps = get_fpbase_spectra(bins=bins)"
    ]
@@ -257,6 +329,35 @@
    "metadata": {},
    "source": [
     "## FPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "longpass_filters.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_combinations.loc[\"Semrock Di03-R635\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_combinations[\n",
+    "    (filter_combinations[\"gap\"] < 50) & (filter_combinations[\"worst_rejection\"] < -5)\n",
+    "]"
    ]
   },
   {
