[shenker/microscope_design] Finished spectra viewer. Finalized filter calculations. Figured out a hack to get plot zoom state to persist after changing drop-down selections. None of this additional work changed my mind about the optimal filters, ended up choosing to go with Chroma.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -8,14 +8,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import re\n",
-    "import io\n",
-    "import requests\n",
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
     "import panel as pn\n",
-    "import pint\n",
-    "from requests_html import HTMLSession"
+    "import param"
    ]
   },
   {
@@ -26,6 +22,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import spectra\n",
     "import util"
    ]
   },
@@ -43,48 +40,6 @@
    "metadata": {},
    "source": [
     "# Spectral response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_spectrum(id_, bins=None):\n",
-    "    df = pd.read_csv(\n",
-    "        f\"https://www.fpbase.org/spectra_csv/?q={id_}\", index_col=\"wavelength\"\n",
-    "    ).squeeze()\n",
-    "    if bins is not None:\n",
-    "        df = util.interpolate_dataframe(df, bins)\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def get_fpbase_spectra(bins=None):\n",
-    "    fpbase_entries = requests.get(\"https://www.fpbase.org/api/proteins/spectra/\").json()\n",
-    "    fps = {}\n",
-    "    for fpbase_entry in fpbase_entries:\n",
-    "        fp = {}\n",
-    "        spectra = []\n",
-    "        for spectrum_type in fpbase_entry[\"spectra\"]:\n",
-    "            state_name = re.sub(r\"^default_\", \"\", spectrum_type[\"state\"])\n",
-    "            for k, v in spectrum_type.items():\n",
-    "                if k == \"state\":\n",
-    "                    continue\n",
-    "                elif k == \"data\":\n",
-    "                    spectra.append(\n",
-    "                        pd.DataFrame(v, columns=[\"wavelength\", state_name]).set_index(\n",
-    "                            \"wavelength\"\n",
-    "                        )\n",
-    "                    )\n",
-    "                else:\n",
-    "                    fp[f\"{state_name}_{k}\"] = v\n",
-    "        df = pd.concat(spectra, axis=1)\n",
-    "        if bins is not None:\n",
-    "            df = util.interpolate_dataframe(df, bins)\n",
-    "        fp[\"spectra\"] = df\n",
-    "        fps[fpbase_entry[\"name\"]] = fp\n",
-    "    return fps"
    ]
   },
   {
@@ -136,60 +91,16 @@
     "    \"Chroma ET665lp\": \"573\",\n",
     "}\n",
     "\n",
-    "sources = {name: read_spectrum(q, bins=bins) for name, q in sources.items()}\n",
-    "dichroics = {name: read_spectrum(q, bins=bins) for name, q in dichroics.items()}\n",
+    "sources = {\n",
+    "    name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in sources.items()\n",
+    "}\n",
+    "dichroics = {\n",
+    "    name: spectra.get_fpbase_spectrum(q, bins=bins) for name, q in dichroics.items()\n",
+    "}\n",
     "longpass_filters = {\n",
-    "    name: read_spectrum(q, bins=bins) for name, q in longpass_filters.items()\n",
+    "    name: spectra.get_fpbase_spectrum(q, bins=bins)\n",
+    "    for name, q in longpass_filters.items()\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_semrock_filters(urls, bins=None):\n",
-    "    if isinstance(urls, str):\n",
-    "        urls = [urls]\n",
-    "    session = HTMLSession()\n",
-    "    spectra = {}\n",
-    "    for url in urls:\n",
-    "        html = session.get(url).html\n",
-    "        catalog_numbers = [\n",
-    "            a.text for a in html.find(\"#resultsView .cartSection > h1 > a\")\n",
-    "        ]\n",
-    "        for catalog_number in catalog_numbers:\n",
-    "            spectrum_number = \"-\".join(catalog_number.split(\"-\")[:2]).replace(\"/\", \"_\")\n",
-    "            name = f\"Semrock {spectrum_number}\"\n",
-    "            spectrum_urls = [\n",
-    "                f\"https://www.semrock.com/_ProductData/Spectra/{spectrum_number}_Spectrum.txt\",\n",
-    "                f\"https://www.semrock.com/_ProductData/Spectra/{spectrum_number}_DesignSpectrum.txt\",\n",
-    "            ]\n",
-    "            spectrum = None\n",
-    "            for spectrum_url in spectrum_urls:\n",
-    "                res = session.get(spectrum_url)\n",
-    "                if not res.ok:\n",
-    "                    continue\n",
-    "                lines = io.StringIO(\n",
-    "                    \"\\n\".join(\n",
-    "                        [l for l in res.text.split(\"\\n\") if not l.startswith(\"---\")]\n",
-    "                    )\n",
-    "                )\n",
-    "                spectrum = pd.read_csv(\n",
-    "                    lines,\n",
-    "                    sep=\"\\t\",\n",
-    "                    skiprows=4,\n",
-    "                    names=[\"wavelength\", spectrum_number],\n",
-    "                    index_col=0,\n",
-    "                ).squeeze()\n",
-    "                break\n",
-    "            if spectrum is None:\n",
-    "                raise ValueError(f\"could not find spectrum for '{spectrum_number}'\")\n",
-    "            if bins is not None:\n",
-    "                spectrum = util.interpolate_dataframe(spectrum, bins)\n",
-    "            spectra[name] = spectrum\n",
-    "    return spectra"
    ]
   },
   {
@@ -204,13 +115,16 @@
     "]\n",
     "semrock_longpass_urls = [\n",
     "    f\"https://www.semrock.com/filtersRefined.aspx?minWL=520&maxWL=660&id=21,{id_}&page=1&so=0&recs=10000\"\n",
-    "    for id_ in (537, 538, 545)\n",
+    "    for id_ in (537, 538)  # RazorEdge ultrasharp (not available in 32mm standard): 545\n",
     "]\n",
     "\n",
-    "dichroics = {**dichroics, **get_semrock_filters(semrock_dichroic_urls, bins=bins)}\n",
+    "dichroics = {\n",
+    "    **dichroics,\n",
+    "    **spectra.get_semrock_spectra(semrock_dichroic_urls, bins=bins),\n",
+    "}\n",
     "longpass_filters = {\n",
     "    **longpass_filters,\n",
-    "    **get_semrock_filters(semrock_longpass_urls, bins=bins),\n",
+    "    **spectra.get_semrock_spectra(semrock_longpass_urls, bins=bins),\n",
     "}"
    ]
   },
@@ -220,8 +134,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "fps = get_fpbase_spectra(bins=bins)"
+    "dichroics = dict(\n",
+    "    sorted(dichroics.items(), key=lambda x: (x[1].loc[:700] < 0.5)[::-1].idxmax())\n",
+    ")\n",
+    "longpass_filters = dict(\n",
+    "    sorted(longpass_filters.items(), key=lambda x: (x[1].loc[:700] < 0.5).idxmax())\n",
+    ")"
    ]
   },
   {
@@ -230,21 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _filter_plot(fp_name, dc_name, lp_name):\n",
-    "    return (\n",
-    "        fps[fp_name][\"spectra\"].fillna(0).hvplot()\n",
-    "        * dichroics[dc_name].hvplot()\n",
-    "        * longpass_filters[lp_name].hvplot()\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def filter_plot(\n",
-    "    fp_names=fps.keys(), dc_names=dichroics.keys(), lp_names=longpass_filters.keys()\n",
-    "):\n",
-    "    layout = pn.interact(\n",
-    "        _filter_plot, fp_name=fp_names, dc_name=dc_names, lp_name=lp_names\n",
-    "    )\n",
-    "    return pn.Row(pn.Column(\"## Filters\", layout[0]), layout[1])"
+    "%%time\n",
+    "fps = spectra.get_fpbase_protein_spectra(bins=bins)"
    ]
   },
   {
@@ -260,24 +165,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def combine_filter(dc, lp, threshold=0.9, max_wavelength=700):\n",
+    "def combine_filter(dc, lp, threshold=0.5, od_threshold=6, max_wavelength=700):\n",
     "    dc = dc.loc[:max_wavelength]\n",
     "    lp = lp.loc[:max_wavelength]\n",
-    "    log_dc = np.log10(dc)\n",
-    "    log_lp = np.log10(lp)\n",
-    "    # highest wavelength that gives >90% excitation (dichroic reflectance)\n",
-    "    ex_cutoff = (dc > 1 - threshold)[::-1].idxmin()\n",
+    "    dc_od = -np.log10(dc)\n",
+    "    lp_od = -np.log10(lp)\n",
+    "    # highest wavelength that gives <90% excitation (dichroic reflectance)\n",
+    "    ex_cutoff = (dc < 1 - threshold)[::-1].idxmax()\n",
+    "    # highest wavelength that gives >OD6 rejection\n",
+    "    ex_od_cutoff = (lp_od > od_threshold)[::-1].idxmax()\n",
     "    # highest wavelength that gives <90% transmission (dichroic+lp)\n",
-    "    em_cutoff = (log_dc + log_lp > np.log10(threshold)).idxmax()\n",
-    "    # gap between those wavelengths\n",
+    "    em_cutoff = (dc_od + lp_od < -np.log10(threshold)).idxmax()\n",
     "    gap = em_cutoff - ex_cutoff\n",
+    "    ex_gap = ex_od_cutoff - ex_cutoff\n",
     "    # highest OD below excitation cutoff\n",
-    "    worst_rejection = (log_dc + log_lp).loc[:ex_cutoff].max()\n",
+    "    worst_rejection = (dc_od + lp_od).loc[:ex_cutoff].dropna().min()\n",
     "    return pd.Series(\n",
     "        {\n",
     "            \"ex_cutoff\": ex_cutoff,\n",
+    "            \"ex_od_cutoff\": ex_od_cutoff,\n",
     "            \"em_cutoff\": em_cutoff,\n",
     "            \"gap\": gap,\n",
+    "            \"ex_gap\": ex_gap,\n",
     "            \"worst_rejection\": worst_rejection,\n",
     "        }\n",
     "    )\n",
@@ -294,7 +203,7 @@
     "        ).T\n",
     "        for dc_name, dc_spectrum in dichroics.items()\n",
     "    }\n",
-    ").sort_values(\"ex_cutoff\")"
+    ").sort_values([\"ex_cutoff\", \"gap\", \"ex_gap\"])"
    ]
   },
   {
@@ -304,59 +213,7 @@
    "outputs": [],
    "source": [
     "acceptable_filter_combinations = filter_combinations[\n",
-    "    (filter_combinations[\"gap\"] < 30) & (filter_combinations[\"worst_rejection\"] < -5.5)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for each dichroic, pick the longpass that minimizes the gap\n",
-    "selected_filter_combinations = (\n",
-    "    acceptable_filter_combinations.groupby(level=0)\n",
-    "    .apply(lambda x: x.loc[[x[\"gap\"].idxmin()]])\n",
-    "    .droplevel(0)\n",
-    "    .sort_values(\"ex_cutoff\")\n",
-    "    .index.values\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## FPs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "longpass_filters.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_combinations.loc[\"Semrock Di03-R635\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filter_combinations[\n",
-    "    (filter_combinations[\"gap\"] < 50) & (filter_combinations[\"worst_rejection\"] < -5)\n",
+    "    (filter_combinations[\"gap\"] < 10) & (filter_combinations[\"ex_gap\"].abs() < 20)\n",
     "]"
    ]
   },
@@ -375,7 +232,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_filter_combinations"
+    "# for each dichroic, pick the longpass that minimizes the gap\n",
+    "selected_filter_combinations = (\n",
+    "    acceptable_filter_combinations.groupby(level=0)\n",
+    "    .apply(lambda x: x.loc[[x[\"ex_gap\"].abs().idxmin()]])\n",
+    "    .droplevel(0)\n",
+    "    .sort_values(\"ex_cutoff\")\n",
+    "    .index.values\n",
+    ")\n",
+    "# selected_filter_combinations = acceptable_filter_combinations.index"
    ]
   },
   {
@@ -384,23 +249,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_heatmap(df, highlight_negative=False, **kwargs):\n",
-    "    with pd.option_context(\"display.max_rows\", None, \"display.max_columns\", None):\n",
-    "        df = df.style.format(precision=2).background_gradient(\n",
-    "            **{\"cmap\": \"RdPu\", \"axis\": None, **kwargs}\n",
-    "        )\n",
-    "        if highlight_negative:\n",
-    "\n",
-    "            def style_negative(v, props=\"\"):\n",
-    "                return props if v < 0 else None\n",
-    "\n",
-    "            df = df.applymap(\n",
-    "                style_negative,\n",
-    "                props=f\"background-color:{highlight_negative};color:white;\",\n",
-    "            )\n",
-    "        display(df)\n",
-    "\n",
-    "\n",
+    "acceptable_filter_combinations.loc[selected_filter_combinations]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def fp_efficiency(dc, lp, ex, em, ex_cutoff, em_cutoff):\n",
     "    return pd.Series(\n",
     "        {\n",
@@ -477,7 +341,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_heatmap(filter_metrics[\"efficiency\"])"
+    "def spectra_viewer(fp_names=None, dc_names=None, lp_names=None):\n",
+    "    viewer = spectra.SpectraViewer(\n",
+    "        fps, dichroics, longpass_filters, fp_names, dc_names, lp_names\n",
+    "    )\n",
+    "    return pn.Row(pn.Column(\"## Spectra\", viewer.param), viewer.view)"
    ]
   },
   {
@@ -486,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_heatmap(filter_metrics[\"cutoff_amplitude\"])"
+    "spectra.show_heatmap(filter_metrics[\"efficiency\"])"
    ]
   },
   {
@@ -495,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_heatmap(filter_metrics[\"margin\"], vmin=0, highlight_negative=\"black\")"
+    "spectra.show_heatmap(filter_metrics[\"cutoff_amplitude\"])"
    ]
   },
   {
@@ -504,7 +372,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter_plot(fp_names=selected_fps)"
+    "spectra.show_heatmap(filter_metrics[\"margin\"], vmin=0, highlight_negative=\"black\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectra_viewer(fp_names=selected_fps)"
    ]
   },
   {
