[sigma_circuits] Minor updates to sigma segmentation.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210605 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210605 Segmentation.ipynb
@@ -11,13 +11,7 @@
     "import nd2reader\n",
     "import matplotlib.pyplot as plt\n",
     "import holoviews as hv\n",
-    "\n",
-    "# from holoviews.operation.datashader import regrid\n",
     "import skimage\n",
-    "\n",
-    "# import skimage.filters\n",
-    "# import skimage.feature\n",
-    "# import scipy.ndimage\n",
     "from tqdm.auto import tqdm\n",
     "import dask\n",
     "import dask.array as da\n",
@@ -28,13 +22,7 @@
     "from itertools import repeat\n",
     "from pathlib import Path\n",
     "from glob import glob\n",
-    "\n",
-    "# import cachetools\n",
-    "\n",
-    "# import numpy_indexed\n",
     "import pickle\n",
-    "\n",
-    "# import pyarrow as pa\n",
     "import warnings\n",
     "import os\n",
     "from numbers import Integral\n",
@@ -88,11 +76,21 @@
    "source": [
     "dask.config.config[\"distributed\"][\"scheduler\"][\"allowed-failures\"] = 6\n",
     "dask.config.config[\"distributed\"][\"worker\"][\"memory\"] = {\n",
+    "    **dask.config.config[\"distributed\"][\"worker\"][\"memory\"],\n",
     "    \"target\": 0.7,\n",
     "    \"spill\": 0.8,\n",
     "    \"pause\": 0.9,\n",
     "    \"terminate\": 0.95,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask.config.config[\"distributed\"][\"worker\"][\"memory\"]"
    ]
   },
   {
@@ -139,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.restart()"
+    "# client.restart()"
    ]
   },
   {
@@ -149,7 +147,7 @@
    "outputs": [],
    "source": [
     "# cluster.scale(30)\n",
-    "cluster.adapt(maximum=100)"
+    "cluster.adapt(maximum=400)"
    ]
   },
   {
@@ -166,7 +164,7 @@
    "outputs": [],
    "source": [
     "nd2_filename = (\n",
-    "    \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210602/RBS_new_terminators.nd2\"\n",
+    "    \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/211014/feedback_new_fp_new_PWM_2.nd2\"\n",
     ")\n",
     "nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
    ]
@@ -177,9 +175,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "channels = set(nd2.metadata[\"channels\"]) - set([\"Phase-Fluor\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "data_graph = segmentation.process(\n",
-    "    nd2_filename, time_slice=slice(None), position_slice=slice(None), delayed=True\n",
+    "    nd2_filename,\n",
+    "    time_slice=slice(None),\n",
+    "    position_slice=slice(None),\n",
+    "    delayed=True,\n",
+    "    signal_channels=channels,\n",
     ")"
    ]
   },
@@ -267,8 +287,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "{k: v for k, v in data_futures.items() if v.status == \"error\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{k: v for k, v in data_futures.items() if v.status == \"pending\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.gather({k: v for k, v in data_futures.items() if v.status == \"error\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "dfs = client.gather(data_futures)"
+    "dfs = client.gather({k: v for k, v in data_futures.items() if v.status != \"error\"})\n",
+    "# dfs = client.gather({k: v for k, v in data_futures.items() if v.status == \"finished\"})"
    ]
   },
   {
@@ -382,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210605_expt210602_1.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/211017_expt211014.pickle\"\n",
     "with open(filename, \"wb\") as f:\n",
     "    pickle.dump(data, f)"
    ]
@@ -397,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
