Preparing example notebooks for Quansight.

--- a/paulssonlab/src/paulssonlab/quansight/Trench finding demo.ipynb
+++ b/paulssonlab/src/paulssonlab/quansight/Trench finding demo.ipynb
@@ -31,6 +31,7 @@
     "from cytoolz import *\n",
     "from importlib import reload\n",
     "import traceback\n",
+    "import holoviews as hv\n",
     "import hvplot.pandas\n",
     "import scipy\n",
     "from glob import glob\n",
@@ -57,9 +58,8 @@
    "outputs": [],
    "source": [
     "########\n",
-    "# import nd2reader\n",
-    "import skimage\n",
-    "from matriarch import *\n",
+    "import nd2reader\n",
+    "from paulssonlab.image_analysis import *\n",
     "\n",
     "# import common, trench_detection, util, data_io, processing\n",
     "# import ui, diagnostics, metadata\n",
