[quansight] Add semicolon to make show_plot_viewer work correctly. Load from TIFF in trench finding notebook.

--- a/paulssonlab/src/paulssonlab/quansight/Trench finding demo.ipynb
+++ b/paulssonlab/src/paulssonlab/quansight/Trench finding demo.ipynb
@@ -25,7 +25,6 @@
     "from dask_jobqueue import SLURMCluster\n",
     "import holoviews as hv\n",
     "import matplotlib.pyplot as plt\n",
-    "import nd2reader\n",
     "import warnings\n",
     "from functools import partial\n",
     "from cytoolz import *\n",
@@ -57,15 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "########\n",
-    "import nd2reader\n",
-    "from paulssonlab.image_analysis import *\n",
-    "\n",
-    "# import common, trench_detection, util, data_io, processing\n",
-    "# import ui, diagnostics, metadata\n",
-    "# import workflow, image, geometry\n",
-    "# import trench_detection.hough, trench_detection.core\n",
-    "# import trench_segmentation.watershed"
+    "from paulssonlab.image_analysis import *"
    ]
   },
   {
@@ -90,18 +81,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2 = nd2reader.ND2Reader(\n",
-    "    \"/home/jqs1/scratch/jqs1/microscopy/211027/211027_fb_library_strong_sigw.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = nd2.get_frame_2D(v=0, c=0)"
+    "# import nd2reader\n",
+    "# nd2 = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/211027/211027_fb_library_strong_sigw.nd2\")\n",
+    "# img = nd2.get_frame_2D(v=0,c=0)\n",
+    "import tifffile\n",
+    "\n",
+    "img = tifffile.imread(\"/home/jqs1/scratch/jqs1/microscopy/211027/example.tiff\")"
    ]
   },
   {
@@ -112,17 +97,6 @@
    "source": [
     "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_trenches_diag = diagnostics.wrap_diagnostics(\n",
-    "    trench_detection.find_trenches, ignore_exceptions=True, pandas=True\n",
-    ")"
    ]
   },
   {
@@ -144,13 +118,6 @@
    "source": [
     "ui.show_plot_browser(diag)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
