[shenker/image_analysis] WIP RBS+deg analysis.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220712 RBS+deg library.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220712 RBS+deg library.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"04:00:00\",\n",
+    "    walltime=\"06:00:00\",\n",
     "    memory=\"20GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/log\",\n",
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.adapt(maximum=200)"
+    "cluster.adapt(maximum=300)"
    ]
   },
   {
@@ -296,8 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_frames = all_frames.loc[IDX[:, :5, :, :], :]\n",
-    "# selected_frames = all_frames.loc[IDX[:, :, :, :], :]"
+    "#selected_frames = all_frames.loc[IDX[:, :5, :, :], :]\n",
+    "selected_frames = all_frames.loc[IDX[:, :, :, :], :]"
    ]
   },
   {
@@ -610,7 +610,7 @@
    "outputs": [],
    "source": [
     "def filename_func(\n",
-    "    extension=None, kind=None, name=None, filename=None, position=None, extra=\"test4\"\n",
+    "    extension=None, kind=None, name=None, filename=None, position=None, extra=\"full\"\n",
     "):\n",
     "    if kind and extra:\n",
     "        kind = f\"{extra}.{kind}\"\n",
@@ -946,195 +946,6 @@
    "source": [
     "labelwise_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = labelwise_df.loc[IDX[3,:,:,1:],:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = hv.Dataset(d, [\"t\", \"trench_set\", \"trench\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds.to(hv.Curve, \"t\", \"YFP-DUAL/mean\").overlay([\"trench_set\", \"trench\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds.to(hv.Curve, \"t\", \"RFP-PENTA/mean\").overlay([\"trench_set\", \"trench\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = labelwise_df.loc[IDX[:,:,:,0], IDX[\"YFP-DUAL\",\"sum\"]].reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.rename(columns={(\"YFP-DUAL\", \"sum\"): \"sum\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.rename()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d2 = d[[(\"trench_set\", \"\"), (\"trench\", \"\"), (\"t\", \"\"), (\"YFP-DUAL\", \"sum\")]].set_axis([\"trench_set\", \"trench\", \"t\", \"YFP\"], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(d2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d2.hvplot.scatter(\"t\", \"YFP\", groupby=[\"trench_set\", \"trench\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The image output is stored in a zarr hierarchy where each FOV gets a LMDB store (with filename like `211117_long_oscillator.nd2.images/pos0.zarr`). Inside that LMDB store (single file + a lock file during writing), the key `\"raw/1/10/CFP-DUAL\"` refers to the image cube with dimensions `(y, x, t)` of raw intensity images in channel `CFP-DUAL`, trench index 10 in trench set 1. The segmentation masks for that image are stored in `\"segmentation/1/10/RFP-DUAL\"` (where `RFP-DUAL` is the channel on which segmentation was performed when running the pipeline). If you browse around, you'll quickly notice plenty of segmentation errors, especially in trenches without any cells. Also the current settings leave plenty of margin around the cells when making trench crops; for production use, we should probably crop much more tightly around the cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = zarr.open(\n",
-    "    zarr.LMDBStore(\n",
-    "        \"/home/jqs1/scratch/jqs1/microscopy/211117/211117_long_oscillator.nd2.test1.images/pos0.zarr\"\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(img.groups())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(img[\"raw\"].groups())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img[\"raw/1/10/CFP-DUAL\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img[\"raw/1/30/RFP-PENTA\"].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img[\"raw/1/30/RFP-PENTA\"][:, :, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img[\"segmentation/1/30/RFP-PENTA\"][:, :, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
