--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220712 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220712 Mosaic animation.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Imports"
    ]
@@ -48,6 +50,15 @@
    "outputs": [],
    "source": [
     "nd2_filenames = [\"/home/jqs1/scratch/jqs1/microscopy/220704/220704rbs_library_fish.nd2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2 = nd2reader.ND2Reader(nd2_filenames[0])"
    ]
   },
   {
@@ -225,6 +236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "small_positions = positions[(positions[\"y_idx\"] < 3) & (positions[\"x_idx\"] < 3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def rectangles_intersect(ul1, lr1, ul2, lr2):\n",
     "    print(ul1, lr1, ul2, lr2)\n",
     "    return not (\n",
@@ -264,10 +284,9 @@
     "    output_dims=(1024, 1024),\n",
     "):\n",
     "    if center is None:\n",
-    "        center = (image_dims[0] / 2, image_dims[1] / 2)\n",
-    "    # viewport_transform = (SimilarityTransform(scale=2, translation=(-256, -256)) +\n",
-    "    #                      output_transformation(*image_size, width, height) +\n",
-    "    #                      SimilarityTransform(translation=(center[0] - , center[1] - )))\n",
+    "        columns = positions[\"x_idx\"].max() - positions[\"x_idx\"].min() + 1\n",
+    "        rows = positions[\"y_idx\"].max() - positions[\"y_idx\"].min() + 1\n",
+    "        center = (image_dims[0] * columns / 2, image_dims[1] * rows / 2)\n",
     "    viewport_transform = output_transformation(*image_dims, *output_dims)\n",
     "    output_img = np.zeros((output_dims[1], output_dims[0], 3))\n",
     "    viewport_ul = (0, 0)\n",
@@ -286,9 +305,6 @@
     "                )\n",
     "                + SimilarityTransform(translation=frame_corner)\n",
     "            )\n",
-    "            # img = get_frame_func(None, t=timepoint)\n",
-    "            # output_img += warp(img, frame_transform, output_shape=output_dims[::-1]) * (0.5 + 0.5*np.random.random())\n",
-    "            # x2, y2 = frame_transform((0,0))\n",
     "            frame_ul = frame_transform.inverse((0, 0))[0]\n",
     "            frame_lr = frame_transform.inverse((image_dims[0] - 1, image_dims[1] - 1))[\n",
     "                0\n",
@@ -298,13 +314,12 @@
     "                output_img += warp(\n",
     "                    img, frame_transform, output_shape=output_dims[::-1]\n",
     "                ) * (0.5 + 0.5 * np.random.random())\n",
-    "            print(x_col, y_col, \"|\", visible, \">\", frame_ul, frame_lr)\n",
     "    return output_img\n",
     "    # for position in positions.iterrows():\n",
     "    #    pass\n",
     "\n",
     "\n",
-    "out_img = mosaic_frame(colorized_frame, positions, (5056, 2960), 0, scale=5)\n",
+    "out_img = mosaic_frame(colorized_frame, small_positions, (5056, 2960), 0, scale=0.1)\n",
     "plt.imshow(out_img)\n",
     "\n",
     "# output_shape = (512, 512)\n",
