--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220713 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220713 Mosaic animation.ipynb
@@ -76,6 +76,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dumps(nd2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "channel_to_color = {\n",
     "    \"BF\": \"#ffffff\",\n",
     "    \"RFP-PENTA\": \"#e22400\",\n",
@@ -292,24 +310,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\", embed=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_intensity_extrema(nd2, channels, v=0, step=10):\n",
     "    extrema = {}\n",
     "    for channel in channels:\n",
@@ -379,7 +379,8 @@
     "    # TODO\n",
     "    small_positions = positions[(positions[\"y_idx\"] < 3) & (positions[\"x_idx\"] < 3)]\n",
     "    image_limits = workflow.get_filename_image_limits(metadata)\n",
-    "    get_frame_func = partial(colorized_frame, nd2, scaling_funcs=scaling_funcs)\n",
+    "    #get_frame_func = None#partial(colorized_frame, nd2, scaling_funcs=scaling_funcs)\n",
+    "    get_frame_func = partial(colorized_frame, None, scaling_funcs=scaling_funcs)#partial(colorized_frame, nd2, scaling_funcs=scaling_funcs)\n",
     "    input_dims = (\n",
     "        image_limits[filename][0][1] + 1,\n",
     "        image_limits[filename][1][1] + 1,\n",
@@ -391,7 +392,7 @@
     "        if timepoints is None:\n",
     "            timepoints = cycle(range(nd2.sizes[\"t\"]))\n",
     "    animation = [\n",
-    "        delayed(mosaic_frame)(get_frame_func, small_positions, input_dims, t, scale=s)\n",
+    "        delayed(mosaic_frame)(get_frame_func, nd2, small_positions, input_dims, t, scale=s)\n",
     "        for t, s in zip(timepoints, scale)\n",
     "    ]\n",
     "    return animation"
@@ -479,14 +480,68 @@
     "%%time\n",
     "scale = repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
     "#timepoints = range(0, 119, 30)\n",
-    "timepoints = [20,40,60]\n",
-    "a = mosaic_animate_scale(\n",
+    "timepoints = range(0, 110, 10)#[20,40,60]\n",
+    "animation_delayed = mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
     "    timepoints=timepoints,\n",
     "    scaling_funcs=scaling_funcs,\n",
-    "    delayed=False,\n",
+    "    delayed=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.__reduce_ex__(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.__reduce_ex__(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dumps(nd2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animation_future = client.compute(animation_delayed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.gather(animation_future)"
    ]
   },
   {
@@ -505,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
+    "export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\")"
    ]
   },
   {
@@ -514,13 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "a = [\n",
-    "    mosaic_frame(\n",
-    "        partial(colorized_frame, nd2), small_positions, (5056, 2960), t, scale=0.3\n",
-    "    )\n",
-    "    for t in (0, 20, 50, 70, 100)  # (0, 10, 20, 30, 50, 70, 100, 115)\n",
-    "]"
+    "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/export_test.mp4\", embed=True)"
    ]
   }
  ],
@@ -540,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
