--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220713 RBS+deg library analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220713 RBS+deg library analysis.ipynb
@@ -281,9 +281,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "channel = \"YFP-DUAL/mean\"\n",
-    "# channel = \"RFP-PENTA/mean\"\n",
-    "# filtered_cells = d.reset_index()\n",
+    "# channel = \"YFP-DUAL/mean\"\n",
+    "channel = \"RFP-PENTA/mean\"\n",
+    "filtered_cells = d.reset_index()\n",
     "# filtered_cells = d[d].reset_index()\n",
     "bins = np.geomspace(filtered_cells[channel].min(), filtered_cells[channel].max(), 100)\n",
     "heatmap = filtered_cells.groupby([\"t\"]).apply(\n",
@@ -449,6 +449,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "45e127b4-a7c5-43f4-8847-98ec220945e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_limits(x):\n",
+    "    x = x.droplevel(0, axis=1)\n",
+    "    return pd.DataFrame(\n",
+    "        {\n",
+    "            \"lower\": x[\"median\"] - x[\"median_absolute_deviation\"],\n",
+    "            \"upper\": x[\"median\"] + x[\"median_absolute_deviation\"],\n",
+    "        }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ebb1bb60-897a-4478-8791-349ead87195f",
    "metadata": {},
    "outputs": [],
@@ -457,17 +474,6 @@
     "medians = filtered_cells.groupby([\"t\"]).agg(\n",
     "    [\"median\", astropy.stats.median_absolute_deviation]\n",
     ")\n",
-    "\n",
-    "\n",
-    "def get_limits(x):\n",
-    "    x = x.droplevel(0, axis=1)\n",
-    "    return pd.DataFrame(\n",
-    "        {\n",
-    "            \"lower\": x[\"median\"] - x[\"median_absolute_deviation\"],\n",
-    "            \"upper\": x[\"median\"] + x[\"median_absolute_deviation\"],\n",
-    "        }\n",
-    "    )\n",
-    "\n",
     "\n",
     "limits = medians.groupby(level=0, axis=1).apply(get_limits)"
    ]
@@ -548,8 +554,8 @@
     "        [\"median\", astropy.stats.median_absolute_deviation]\n",
     "    )\n",
     "    limits = medians.groupby(level=0, axis=1).apply(get_limits)\n",
-    "    medians2 = medians[observable].reset_index()\n",
-    "    limits2 = limits[observable].reset_index()\n",
+    "    medians2 = medians[channel].reset_index()\n",
+    "    limits2 = limits[channel].reset_index()\n",
     "    mean_plot = medians2.hvplot.line(\"t\", \"median\", logy=True)\n",
     "    noise_plot = limits2.hvplot.area(\n",
     "        x=\"t\", y=\"lower\", y2=\"upper\", stacked=False, alpha=0.2, logy=True\n",
@@ -565,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "streamlines.overlay()"
+    "streamlines.overlay().opts(width=900, height=400)"
    ]
   },
   {
@@ -611,9 +617,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8263241c-b048-4ab9-93fe-d82030215a2e",
+   "metadata": {},
+   "source": [
+    "# FISH"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d00dd442-6c7f-4725-92df-a14270533a12",
+   "id": "d535fdd0-95ea-404c-819d-274fcb965e2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "649d8529-3aee-4365-96f3-dd2079ec9048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ch, vmax = \"RFP\", 2000\n",
+    "ch, vmax = \"Cy5\", 6000\n",
+    "#ch, vmax = \"Cy7\", 3000\n",
+    "v = 30\n",
+    "t = 4\n",
+    "f = h5py.File(f\"/home/jqs1/scratch/jqs1/microscopy/220704/FISH/real_run/fov={v}_config={ch}_t={t}\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "333db9a6-2415-4852-a087-ed5f6fbc4264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = np.asarray(f[\"data\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeeb680c-33be-47da-89b1-5956229b1e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,15))\n",
+    "plt.imshow(img, cmap=\"RdPu\", vmax=vmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6563a661-5e90-4dbf-ab04-ebfe3e41740f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -635,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
