--- a/paulssonlab/src/paulssonlab/shenker/cloning/220805 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220805 Deg tags.ipynb
@@ -6,26 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import holoviews as hv\n",
-    "import hvplot.pandas\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import toml\n",
-    "import re\n",
-    "from zipfile import ZipFile\n",
-    "import urllib\n",
-    "from datetime import datetime\n",
-    "import string\n",
     "import pygsheets\n",
     "import requests\n",
-    "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
     "from Bio.Seq import Seq\n",
-    "from Bio.SeqRecord import SeqRecord\n",
-    "import Bio.Entrez as Entrez\n",
-    "import benchlingapi"
+    "from Bio.SeqRecord import SeqRecord"
    ]
   },
   {
@@ -45,8 +31,6 @@
    "outputs": [],
    "source": [
     "import paulssonlab.api as api\n",
-    "import paulssonlab.api.benchling as bapi\n",
-    "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.design as design\n",
@@ -55,18 +39,7 @@
     "import paulssonlab.cloning.viennarna as viennarna\n",
     "import paulssonlab.cloning.thermodynamics as thermodynamics\n",
     "import paulssonlab.cloning.primers as primers\n",
-    "import paulssonlab.cloning.ncbi as ncbi\n",
-    "import paulssonlab.cloning.commands.parser as cmd_parser\n",
-    "import paulssonlab.cloning.commands.semantics as cmd_semantics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.extension(\"bokeh\")"
+    "import paulssonlab.api.geneious as geneious"
    ]
   },
   {
@@ -100,8 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bench_session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])\n",
-    "benchling_folder = bapi.get_project_root(bench_session, config[\"benchling\"][\"project\"])"
+    "geneious_sessionmaker = geneious.connect(**config[\"geneious\"])"
    ]
   },
   {
@@ -110,21 +82,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = registry.Registry(gc, config[\"registry\"][\"folder\"], benchling_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "olib_oligos = reg[(\"oLIB\", \"oligos\")]\n",
-    "olt_oligos = reg[(\"oLT\", \"oligos\")]\n",
-    "plib_plasmids = reg[(\"pLIB\", \"plasmids\")]\n",
-    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
-    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
-    "part_types = reg[(\"LIB\", \"parts\", \"Part types\")]"
+    "reg = registry.Registry(\n",
+    "    gc,\n",
+    "    config[\"registry\"][\"folder\"],\n",
+    "    geneious_sessionmaker=geneious_sessionmaker,\n",
+    "    geneious_folder=\"registry\",\n",
+    ")"
    ]
   },
   {
@@ -140,19 +103,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "olib_oligos = reg[(\"oLIB\", \"oligos\")]\n",
+    "plib_plasmids = reg[(\"pLIB\", \"plasmids\")]\n",
+    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
+    "flib_fragments = reg[(\"fLIB\", \"fragments\")]\n",
+    "part_types = reg[(\"fLIB\", \"fragments\", \"Part types\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# tags\n",
     "tag_part_type = \"ClpXP_tag\"\n",
     "tag_overhangs = workflow.overhangs_for(part_types[tag_part_type])\n",
-    "library_primer = \"oLIB46\"\n",
+    "library_reverse_primer = \"oLIB46\"\n",
     "tag_enzyme = Restriction.BsaI\n",
     "placeholder_enzyme = Restriction.BsaI\n",
     "num_random_bases = 6  # random bases to add between enzyme binding site and end of DNA\n",
-    "clpx_tag_length = 3  # aa\n",
-    "nnk_length = 6  # aa\n",
-    "nnk_clpx_length = nnk_length + clpx_tag_length  # aa\n",
+    "tail_length_aa = 3  # aa\n",
+    "tail_length = tail_length_aa * 3  # nt\n",
+    "sspb_length_aa = 6  # aa (part of the SspB binding site that is mutagenized with NNK's; note we keep first two alanines fixed)\n",
+    "sspb_length = sspb_length_aa * 3  # nt\n",
     "head_length = 6  # nt\n",
-    "tail_length = clpx_tag_length * 3  # nt\n",
-    "part_tags = \"degradation clpxp sequestration\"\n",
     "reference = \"Andersen, J. B., Sternberg, C., Poulsen, L. K., Bjørn, S. P., Givskov, M., & Molin, S. (1998). New unstable variants of green fluorescent protein for studies of transient gene expression in bacteria. Applied and environmental microbiology, 64(6), 2240-2246.\"\n",
     "\n",
     "# placeholders\n",
@@ -274,20 +249,26 @@
     "        \"Description\": f\"Wild-type {name} ClpXP degradation tag from Andersen 1998.\",\n",
     "    }\n",
     "    assert (\n",
-    "        len(seq) - head_length_without_prefix - tail_length_with_suffix\n",
-    "        == nnk_length * 3\n",
+    "        len(seq) - head_length_without_prefix - tail_length_with_suffix == sspb_length\n",
     "    )\n",
     "    tags[f\"degtag_{name}_NNK\"] = {\n",
     "        \"Sequence\": seq[:head_length_without_prefix]\n",
-    "        + \"NNK\" * nnk_length\n",
+    "        + \"NNK\" * sspb_length_aa\n",
     "        + seq[-tail_length_with_suffix:],\n",
-    "        \"Description\": f\"ClpXP degradation tag library with 2x alanines, {nnk_length}x NNK's, and the {name} tail from Andersen 1998.\",\n",
+    "        \"Description\": f\"ClpXP degradation tag library with 2x alanines, {sspb_length_aa}x NNK's, and the {name} tail from Andersen 1998.\",\n",
     "    }\n",
+    "seq0 = next(iter(tag_parts.values()))\n",
     "tags[f\"degtag_all_NNK\"] = {\n",
-    "    \"Sequence\": seq[:head_length_without_prefix]\n",
-    "    + \"NNK\" * nnk_clpx_length\n",
-    "    + seq[-(tail_length_with_suffix - clpx_tag_length * 3) :],\n",
-    "    \"Description\": f\"ClpXP degradation tag library with 2x alanines and {nnk_clpx_length}x NNK's.\",\n",
+    "    \"Sequence\": seq0[:head_length_without_prefix]\n",
+    "    + \"NNK\" * (sspb_length_aa + tail_length_aa)\n",
+    "    + seq0[-(tail_length_with_suffix - tail_length) :],\n",
+    "    \"Description\": f\"ClpXP degradation tag library with 2x alanines and {sspb_length_aa}x NNK's.\",\n",
+    "}\n",
+    "tags[f\"degtag_tail_NNK\"] = {\n",
+    "    \"Sequence\": seq0[: head_length_without_prefix + sspb_length]\n",
+    "    + \"NNK\" * tail_length_aa\n",
+    "    + seq0[-len(tag_suffix) :],\n",
+    "    \"Description\": f\"ClpXP degradation tag library with 2x alanines, wildtype sspB binding site, and {tail_length_aa}x NNK's.\",\n",
     "}"
    ]
   },
@@ -306,7 +287,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library_primer_seq = workflow.normalize_seq(reg.get(library_primer)[\"Sequence\"])"
+    "library_primer_seq_rc = workflow.normalize_seq(\n",
+    "    sequence.reverse_complement(reg.get(library_reverse_primer)[\"Sequence\"])\n",
+    ")"
    ]
   },
   {
@@ -324,37 +307,45 @@
     "    \"Type\": \"Primer\",\n",
     "}\n",
     "\n",
-    "part_base = {\n",
+    "fragment_base = {\n",
     "    **base,\n",
-    "    \"Tags\": part_tags,\n",
     "    \"Reference\": reference,\n",
     "}\n",
     "\n",
-    "# apply = {\"Sequence\": workflow.normalize_seq}\n",
-    "apply = {\"Name\": None}\n",
+    "apply_oligo = {\"Name\": None}  # {\"Sequence\": workflow.normalize_seq}\n",
+    "overwrite_oligo = False\n",
+    "apply_fragment = {\"Name\": None}\n",
+    "overwrite_fragment = False\n",
     "\n",
     "for name, row in tags.items():\n",
     "    # add BsaI flanks\n",
     "    oligo_seq = (\n",
-    "        design.random_bases(num_random_bases)\n",
-    "        + design.type2s_with_spacer(tag_enzyme, len(tag_overhangs[0]))\n",
+    "        design.type2s_with_spacer(tag_enzyme, len(tag_overhangs[0]))\n",
     "        + row[\"Sequence\"]\n",
     "        + sequence.reverse_complement(\n",
-    "            design.type2s_with_spacer(tag_enzyme, len(tag_overhangs[0]))\n",
+    "            design.type2s_with_spacer(tag_enzyme, len(tag_overhangs[1]))\n",
     "        )\n",
     "    )\n",
     "    oligo_seq = workflow.normalize_seq(oligo_seq)\n",
+    "    oligo_seq = design.random_bases(num_random_bases, seed=oligo_seq) + oligo_seq\n",
     "    if workflow.DEGENERATE_BASES_REGEX.search(workflow.normalize_seq(row[\"Sequence\"])):\n",
     "        # is library with degenerate bases, append library primer\n",
-    "        oligo_seq = oligo_seq + library_primer_seq\n",
-    "        oligo_row = {**oligo_base, **row, \"Name\": name, \"Sequence\": oligo_seq.upper()}\n",
-    "        oligo_id = olib_oligos.upsert(oligo_row, apply=apply)\n",
-    "        usage = f\"{oligo_id}~,{library_primer}/{tag_enzyme}\"\n",
+    "        oligo_seq = oligo_seq + library_primer_seq_rc\n",
+    "        oligo_row = {\n",
+    "            **oligo_base,\n",
+    "            **row,\n",
+    "            \"Name\": f\"{name}_v2\",\n",
+    "            \"Sequence\": oligo_seq.upper(),\n",
+    "        }\n",
+    "        oligo_id = olib_oligos.upsert(\n",
+    "            oligo_row, apply=apply_oligo, overwrite=overwrite_oligo\n",
+    "        )\n",
+    "        usage = f\"{oligo_id}<{library_reverse_primer}>/{tag_enzyme}\"\n",
     "    else:\n",
     "        # not library, just order two oligos to anneal\n",
     "        # in this case, there's no reverse primer binding site,\n",
     "        # so we need to add random bases to ensure efficient cutting\n",
-    "        oligo_seq = oligo_seq + design.random_bases(num_random_bases)\n",
+    "        oligo_seq = oligo_seq + design.random_bases(num_random_bases, seed=oligo_seq)\n",
     "        oligo_id = olib_oligos.upsert(\n",
     "            {\n",
     "                **oligo_base,\n",
@@ -362,21 +353,26 @@
     "                \"Name\": f\"{name}_sense\",\n",
     "                \"Sequence\": workflow.normalize_seq_upper(oligo_seq),\n",
     "            },\n",
-    "            apply=apply,\n",
+    "            apply=apply_oligo,\n",
+    "            overwrite=overwrite_oligo,\n",
     "        )\n",
     "        oligo_id2 = olib_oligos.upsert(\n",
     "            {\n",
     "                **oligo_base,\n",
     "                **row,\n",
     "                \"Name\": f\"{name}_antisense\",\n",
-    "                \"Sequence\": workflow.normalize_seq_upper(oligo_seq),\n",
+    "                \"Sequence\": workflow.normalize_seq_upper(\n",
+    "                    sequence.reverse_complement(oligo_seq)\n",
+    "                ),\n",
     "            },\n",
-    "            apply=apply,\n",
+    "            apply=apply_oligo,\n",
+    "            overwrite=overwrite_oligo,\n",
     "        )\n",
     "        usage = f\"{oligo_id}={oligo_id2}/{tag_enzyme}\"\n",
-    "    part_row = {\n",
-    "        **part_base,\n",
+    "    fragment_row = {\n",
+    "        **fragment_base,\n",
     "        **row,\n",
+    "        \"Name\": name,\n",
     "        \"Sequence\": workflow.normalize_seq(row[\"Sequence\"]),\n",
     "        \"Usage\": usage,\n",
     "        \"Type\": tag_part_type,\n",
@@ -384,8 +380,9 @@
     "        \"Downstream overhang\": tag_overhangs[1],\n",
     "        \"Species/codon usage\": \"E. coli\",\n",
     "    }\n",
-    "    lib_parts[name] = part_row\n",
-    "    # lib_parts.upsert(part_row, apply=apply)"
+    "    flib_fragments.upsert(\n",
+    "        fragment_row, apply=apply_fragment, overwrite=overwrite_fragment\n",
+    "    )"
    ]
   },
   {
@@ -394,8 +391,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olib_oligos.save()\n",
-    "lib_parts.save()"
+    "flib_fragments.local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos.local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# olib_oligos.commit()\n",
+    "# flib_fragments.commit()"
    ]
   },
   {
@@ -518,13 +533,14 @@
     "    \"Type\": \"Primer\",\n",
     "}\n",
     "\n",
-    "apply = {\"Sequence\": workflow.normalize_seq}\n",
+    "apply_oligo = {\"Name\": None}  # {\"Sequence\": workflow.normalize_seq}\n",
+    "overwrite_oligo = False\n",
     "placeholder_oligo_names = {}\n",
     "\n",
     "for part_name in part_names:\n",
     "    name = f\"degtag_ph_{part_name}\"\n",
     "    description = f\"Adds a deg tag placeholder to {source_plasmid_names[part_name]} ({part_name}).\"\n",
-    "    forward_primer_id = olt_oligos.upsert(\n",
+    "    forward_primer_id = olib_oligos.upsert(\n",
     "        {\n",
     "            **placeholder_oligo_base,\n",
     "            \"Name\": f\"{name}_f\",\n",
@@ -533,9 +549,10 @@
     "            ),\n",
     "            \"Description\": description,\n",
     "        },\n",
-    "        apply=apply,\n",
+    "        apply=apply_oligo,\n",
+    "        overwrite=overwrite_oligo,\n",
     "    )\n",
-    "    reverse_primer_id = olt_oligos.upsert(\n",
+    "    reverse_primer_id = olib_oligos.upsert(\n",
     "        {\n",
     "            **placeholder_oligo_base,\n",
     "            \"Name\": f\"{name}_r\",\n",
@@ -544,7 +561,8 @@
     "            ),\n",
     "            \"Description\": description,\n",
     "        },\n",
-    "        apply=apply,\n",
+    "        apply=apply_oligo,\n",
+    "        overwrite=overwrite_oligo,\n",
     "    )\n",
     "    placeholder_oligo_names[part_name] = (forward_primer_id, reverse_primer_id)"
    ]
@@ -555,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olt_oligos.local"
+    "olib_oligos.local"
    ]
   },
   {
@@ -571,7 +589,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.get(\"sigW\")"
+    "# use already-generated oligos\n",
+    "storage_vector_seqs[\"sigW\"] = reg.eval_command(\"@Gib(pLIB214<oLT100,oLT101>)\")[\"_seq\"]\n",
+    "storage_vector_seqs[\"rsiW\"] = reg.eval_command(\"@Gib(pLIB215<oLT100,oLT102>)\")[\"_seq\"]"
    ]
   },
   {
@@ -580,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frags = enzyme.re_digest(s, Restriction.BsaI)"
+    "workflow.re_digest_part(storage_vector_seqs[\"sigW\"], Restriction.BsaI)"
    ]
   },
   {
@@ -589,7 +609,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frags"
+    "plib_maps[\"pLIB321\"] = storage_vector_seqs[\"sigW\"]\n",
+    "plib_maps[\"pLIB322\"] = storage_vector_seqs[\"rsiW\"]"
    ]
   },
   {
@@ -598,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(frags[0])"
+    "plib_maps.local"
    ]
   },
   {
@@ -607,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(frags[1])"
+    "plib_maps.commit()"
    ]
   },
   {
@@ -616,7 +637,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(frags[2])"
+    "flib_fragments.upsert(\n",
+    "    {\n",
+    "        \"Name\": \"sigW+ClpXP_tag\",\n",
+    "        \"Date\": workflow.date(),\n",
+    "        \"Sequence\": workflow.re_digest_part(\n",
+    "            storage_vector_seqs[\"sigW\"], Restriction.BsaI\n",
+    "        ).seq_lower(),\n",
+    "    },\n",
+    "    key_columns=[\"Name\"],\n",
+    "    overwrite=True,\n",
+    ")\n",
+    "flib_fragments.upsert(\n",
+    "    {\n",
+    "        \"Name\": \"rsiW+ClpXP_tag\",\n",
+    "        \"Date\": workflow.date(),\n",
+    "        \"Sequence\": workflow.re_digest_part(\n",
+    "            storage_vector_seqs[\"rsiW\"], Restriction.BsaI\n",
+    "        ).seq_lower(),\n",
+    "    },\n",
+    "    key_columns=[\"Name\"],\n",
+    "    overwrite=True,\n",
+    ")"
    ]
   },
   {
@@ -625,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(workflow.re_digest_part(reg.get(\"pLIB214\")[\"_seq\"], Restriction.BsaI))"
+    "flib_fragments.local"
    ]
   },
   {
@@ -634,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(workflow.re_digest_part(s, Restriction.BsaI))"
+    "flib_fragments.commit()"
    ]
   },
   {
@@ -647,7 +689,6 @@
    "source": [
     "placeholder_part_base = {\n",
     "    **placeholder_base,\n",
-    "    #    \"Tags\": part_tags, # ADD TAGS\n",
     "}\n",
     "\n",
     "apply = {\"Name\": None}\n",
@@ -677,42 +718,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olt.upsert()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# storage vector maps\n",
     "# storage vector plasmid entry\n",
     "# storage vector strain entry"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# olib_oligos.save()\n",
-    "olt_oligos.save()\n",
-    "# lib_parts.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -726,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
