Silence warnings in find_trenches.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220813 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220813 New architecture.ipynb
@@ -312,17 +312,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%pyinstrument\n",
+    "%%time\n",
     "trenches = trench_detection.find_trenches(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trenches"
    ]
   },
   {
