[shenker/image_analysis,image_analysis/trench_detection] find_trenches no longer uses a MultiIndex on columns. It still uses a trench_set/trench MultiIndex on rows.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220814 New architecture.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220814 New architecture.ipynb
@@ -326,15 +326,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processing._crop_trenches(trenches, img)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,6 +350,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def foo():\n",
+    "    pass\n",
+    "\n",
     "def handle_image(pipeline, msg):\n",
     "    image = msg[\"image\"]\n",
     "    {\"channel\": channel, \"fov_num\": fov_num, \"t\": t, **other_metadata} = metadata\n",
